ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
06/03/2016 Oleh Derevenko
        * dJointSetHinge2Axes public function has been added and 
          dJointSetHinge2Axis1/2 have been marked deprecated due to being 
          unsafe.

05/13/2016 Oleh Derevenko
        * ICE Container class allocation strategy fixed to avoid reserving 
          excess memory with large collections.

05/10/2016 Oleh Derevenko
        * dSafeNormalize3 and dSafeNormalize4 functions changed to leave the
          parameter intact instead of replacing it with the X-axis unit in case 
          of fault.

04/12/2016 Oleh Derevenko
        * A function to create a self-threaded threading implementation object
          has been moved back to public headers as there could be a use for it
          while running several worlds in parallel threads.

01/09/2016 Oleh Derevenko
        * Hinge2 joint corected to avoid faulting asserts when the axes get 
          temporarily invalid during assignments (suggested by David Mansolino)

01/03/2016 Oleh Derevenko
        * An invalid memory access fixed in dxSAPSpace::BoxPruning() in case
          if there were NaN values in AABBs to be sorted.

12/25/2015 Oleh Derevenko
        * Unexpected joint mode assignment (instead of comparison) fixed within
          an dUASSERT in dJointSetTransmissionAxis2() of transmission joint

11/28/2015 Oleh Derevenko
        * Convex-Trimesh collider added (libccd+GIMPACT only)(by Piotr Piastucki)
        * dCreateConvex() and dGeomSetConvex() public APIs changed to expect 
          their parameter arrays as const pointers

11/01/2015 Oleh Derevenko
        * OPCODE mesh colliders' input coordinates have been offset to  