@@ -358,9 +358,9 @@ static int findLevel (dReal bounds[6])
 // factors could be better designed to avoid collisions, and they should
 // probably depend on the hash table physical size.
 
-static unsigned long getVirtualAddress (int level, int x, int y, int z)
+static unsigned long getVirtualAddressBase (unsigned int level, unsigned int x, unsigned int y)
 {
-    return level*1000 + x*100 + y*10 + z;
+    return level * 1000UL + x * 100UL + y * 10UL;
 }
 
 //****************************************************************************
@@ -453,10 +453,11 @@ void dxHashSpace::collide (void *data, dNearCallback *callback)
             aabb.level = level;
             if (level > maxlevel) maxlevel = level;
             // cellsize = 2^level
-            dReal cellsize = (dReal) ldexp (1.0,level);
+            dReal cellSizeRecip = dRecip((dReal) ldexp(1.0, level));
             // discretize AABB position to cell size
-            for (i=0; i < 6; i++)
-                aabb.dbounds[i] = (int) floor (geom->aabb[i]/cellsize);
+            for (i=0; i < 6; i++) {
+                aabb.dbounds[i] = (int) floor(geom->aabb[i] * cellSizeRecip);
+            }
             // set AABB index
             aabb.index = hash_boxes.size();
             // aabb goes in main list
@@ -475,7 +476,7 @@ void dxHashSpace::collide (void *data, dNearCallback *callback)
     // have been intersection-tested against each other yet. this array can
     // grow large with high n, but oh well...
     int tested_rowsize = (n+7) >> 3;	// number of bytes needed for n bits
-    std::vector<unsigned char> tested(n * tested_rowsize);
+    std::vector<uint8> tested(n * tested_rowsize);
 
     // create a hash table to store all AABBs. each AABB may take up to 8 cells.
     // we use chaining to resolve collisions, but we use a relatively large table
@@ -485,21 +486,29 @@ void dxHashSpace::collide (void *data, dNearCallback *callback)
     for (i=0; i<NUM_PRIMES; i++) {
         if ((size_t)prime[i] >= (8*n)) break;
     }
-    if (i >= NUM_PRIMES)
+    if (i >= NUM_PRIMES) {
         i = NUM_PRIMES-1;	// probably pointless
-    int sz = prime[i];
+    }
+
+    const int sz = prime[i];
 
     // allocate and initialize hash table node pointers
-    std::vector<Node*> table(sz);
+    typedef std::vector<Node*> HashTable;
+    HashTable table(sz);
 
     // add each AABB to the hash table (may need to add it to up to 8 cells)
-    for (AABBlist::iterator aabb=hash_boxes.begin(); aabb!=hash_boxes.end(); ++aabb) {
+    const AABBlist::iterator hashend = hash_boxes.end();
+    for (AABBlist::iterator aabb = hash_boxes.begin(); aabb != hashend; ++aabb) {
         const int *dbounds = aabb->dbounds;
-        for (int xi = dbounds[0]; xi <= dbounds[1]; xi++) {
-            for (int yi = dbounds[2]; yi <= dbounds[3]; yi++) {
-                for (int zi = dbounds[4]; zi <= dbounds[5]; zi++) {
+        const int xend = dbounds[1];
+        for (int xi = dbounds[0]; xi <= xend; xi++) {
+            const int yend = dbounds[3];
+            for (int yi = dbounds[2]; yi <= yend; yi++) {
+                int zbegin = dbounds[4];
+                unsigned long hi = (getVirtualAddressBase(aabb->level,xi,yi) + zbegin) % sz;
+                const int zend = dbounds[5];
+                for (int zi = zbegin; zi <= zend; (hi = hi + 1 != sz ? hi + 1 : 0), zi++) {
                     // get the hash index
-                    unsigned long hi = getVirtualAddress (aabb->level,xi,yi,zi) % sz;
                     // add a new node to the hash table
                     Node *node = new Node;
                     node->x = xi;
@@ -519,15 +528,20 @@ void dxHashSpace::collide (void *data, dNearCallback *callback)
     // intersecting higher level cells.
 
     int db[6];			// discrete bounds at current level
-    for (AABBlist::iterator aabb=hash_boxes.begin(); aabb!=hash_boxes.end(); ++aabb) {
+    for (AABBlist::iterator aabb = hash_boxes.begin(); aabb != hashend; ++aabb) {
         // we are searching for collisions with aabb
         for (i=0; i<6; i++) db[i] = aabb->dbounds[i];
-        for (int level = aabb->level; level <= maxlevel; level++) {
-            for (int xi = db[0]; xi <= db[1]; xi++) {
-                for (int yi = db[2]; yi <= db[3]; yi++) {
-                    for (int zi = db[4]; zi <= db[5]; zi++) {
-                        // get the hash index
-                        unsigned long hi = getVirtualAddress (level,xi,yi,zi) % sz;
+        for (int level = aabb->level; ; ) {
+            dIASSERT(level <= maxlevel);
+            const int xend = db[1];
+            for (int xi = db[0]; xi <= xend; xi++) {
+                const int yend = db[3];
+                for (int yi = db[2]; yi <= yend; yi++) {
+                    int zbegin = db[4];
+                    // get the hash index
+                    unsigned long hi = (getVirtualAddressBase(level, xi, yi) + zbegin) % sz;
+                    const int zend = db[5];
+                    for (int zi = zbegin; zi <= zend; (hi = hi + 1 != sz ? hi + 1 : 0), zi++) {
                         // search all nodes at this index
                         for (Node* node = table[hi]; node; node=node->next) {
                             // node points to an AABB that may intersect aabb
@@ -548,39 +562,46 @@ void dxHashSpace::collide (void *data, dNearCallback *callback)
                                     }
                                     dIASSERT (i >= 0 && (size_t)i < (tested_rowsize*n));
                                     if ((tested[i] & mask)==0) {
+                                        tested[i] |= mask;
                                         collideAABBs (aabb->geom,node->aabb->geom,data,callback);
                                     }
-                                    tested[i] |= mask;
                             }
                         }
                     }
                 }
             }
+
+            if (level == maxlevel) {
+                break;
+            }
+            ++level;
             // get the discrete bounds for the next level up
-            for (i=0; i<6; i++)
-                db[i] >>= 1;
+            for (i=0; i<6; i++) db[i] >>= 1;
         }
     }
 
     // every AABB in the normal list must now be intersected against every
     // AABB in the big_boxes list. so let's hope there are not too many objects
     // in the big_boxes list.
-    for (AABBlist::iterator aabb=hash_boxes.begin(); aabb!=hash_boxes.end(); ++aabb) {
-        for (AABBlist::iterator aabb2=big_boxes.begin(); aabb2!=big_boxes.end(); ++aabb2) {
-            collideAABBs (aabb->geom,aabb2->geom,data,callback);
+    const AABBlist::iterator bigend = big_boxes.end();
+    for (AABBlist::iterator aabb = hash_boxes.begin(); aabb != hashend; ++aabb) {
+        for (AABBlist::iterator aabb2 = big_boxes.begin(); aabb2 != bigend; ++aabb2) {
+            collideAABBs (aabb->geom, aabb2->geom, data, callback);
         }
     }
 
     // intersected all AABBs in the big_boxes list together
-    for (AABBlist::iterator aabb=big_boxes.begin(); aabb!=big_boxes.end(); ++aabb) {
-        for (AABBlist::iterator aabb2=big_boxes.begin(); aabb2!=big_boxes.end(); ++aabb2) {
-            collideAABBs (aabb->geom,aabb2->geom,data,callback);
+    for (AABBlist::iterator aabb = big_boxes.begin(); aabb != bigend; ++aabb) {
+        AABBlist::iterator aabb2 = aabb; // Allow aabb test with itself to collide subspaces. For body geometries, collideAABBs() is going to exit with no action.
+        while (++aabb2 != bigend) {
+            collideAABBs (aabb->geom, aabb2->geom, data, callback);
         }
     }
 
     // deallocate table
-    for (size_t i=0; i<table.size(); ++i)
-        for (Node* node = table[i]; node;) {
+    const HashTable::iterator tableend = table.end();
+    for (HashTable::iterator el = table.begin(); el != tableend; ++el)
+        for (Node* node = *el; node; ) {
             Node* next = node->next;
             delete node;
             node = next;
